# lab-fast-setup

./: README.md
server/: pyproject.toml
server/tests/: test_app.py
